# themis

./: .gitignore  MANIFEST.in  README.md  README.rst  example.py  example_small.py  setup.py
themis/: __init__.py  auto.py  cbuild.py  channel.py  channelgen.py  codegen.py  codegen_inner.py  codehelpers.py  codeinit.py  drive.py  frc.py  joystick.py  pwm.py  timers.py  util.py
themis-frc-hal/: CMakeLists.txt
themis-frc-hal/include/FRC_FPGA_ChipObject/: tSystem.h
themis-frc-hal/include/FRC_FPGA_ChipObject/nRoboRIO_FPGANamespace/: tAI.h  tAO.h  tAccel.h  tAccumulator.h  tAlarm.h  tAnalogTrigger.h  tBIST.h  tCounter.h  tDIO.h  tDMA.h  tEncoder.h  tGlobal.h  tInterrupt.h  tPWM.h  tPower.h  tRelay.h  tSPI.h  tSysWatchdog.h
themis-frc-hal/themis/: frc.cpp  runloop.c  themis.c  themis.h
themis/cgen/: __init__.py  counter.py  optimizer.py  templates.py
themis/channel/: __init__.py  boolean.py  discrete.py  event.py  float.py
themis/exec/: __init__.py  filters.py  frc.py  optimization_info.py  runloop.py  timers.py
themis/pygen/: __init__.py  annot.py  optimizer.py  templates.py
themisexec/: __init__.py  frc.py  optimization_info.py  timers.py
wpilib/themis/: themis.h  timers.c
